--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -28,4 +28,5 @@ jobs:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
           ACCOUNTS: ${{ secrets.ACCOUNTS }}
+          ENDPOINT: ${{ secrets.ENDPOINT }}
         run: npm start
